syntax = "proto2";

package tracker;

option go_package = "grpc/generated;tracker_pb";

service TrackerService {
  rpc StreamUpdates (stream FrameUpdate) returns (StreamStatus);
}

message BoundingBox {
    required int32 x = 1;
    required int32 y = 2;
    required int32 width = 3;
    required int32 height = 4;
}

message TrackEvent {
    required int32 tracker_id = 1; 
    required string class_name = 2;
    required BoundingBox box = 3;
    optional int32 class_id = 4;
    optional float confidence = 5;
    optional int64 timestamp_ms = 6;
}

message FrameUpdate {
    repeated TrackEvent events = 1;
    required bool high_priority_active = 2; 
    optional int32 frame_number = 3;
}

message StreamStatus {
    required bool success = 1;
    optional string message = 2;
}